--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PJR5DD82');</script>
-<!-- End Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PJR5DD82');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>簡單的 Demo 網站</title>
@@ -37,16 +37,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PJR5DD82"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PJR5DD82"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="container">
         <h1>歡迎來到我的 Demo 網站</h1>
         <p>這是一個簡單的示範網站，您可以在此做一些測試。</p>
-        <button onclick="alert('您按下了按鈕！')">按我一下</button>
+        <button onclick="window.location.href='https://market.aotter.net/item/1669/%E9%99%90%E9%87%8F-%E6%B0%B4%E8%B1%9A%E5%85%AC%E4%BB%94-kabi-%E7%AC%AC%E4%B8%80%E5%BD%88-youtuber-%E8%81%AF%E5%90%8D%E7%A6%AE%E7%9B%92-?gtm_debug=1690521739732'">按我一下</button>
     </div>
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-        <div id="gpt-passback">
-          <div id="supr-ad-container-47aaad2ac38b"></div>
+    <div id="gpt-passback">
+        <div id="supr-ad-container-47aaad2ac38b"></div>
+    </div>
 </body>
 </html>
