--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
         <h1>歡迎來到我的 Demo 網站</h1>
         <p>這是一個簡單的示範網站，您可以在此做一些測試。</p>
-        <button onclick="window.location.href='https://market.aotter.net/item/1669/%E9%99%90%E9%87%8F-%E6%B0%B4%E8%B1%9A%E5%85%AC%E4%BB%94-kabi-%E7%AC%AC%E4%B8%80%E5%BD%88-youtuber-%E8%81%AF%E5%90%8D%E7%A6%AE%E7%9B%92-?gtm_debug=1690521739732'">按我一下</button>
+        <button id="pleasework" onclick="window.location.href='https://market.aotter.net/item/1669/%E9%99%90%E9%87%8F-%E6%B0%B4%E8%B1%9A%E5%85%AC%E4%BB%94-kabi-%E7%AC%AC%E4%B8%80%E5%BD%88-youtuber-%E8%81%AF%E5%90%8D%E7%A6%AE%E7%9B%92-?gtm_debug=1690521739732'">按我一下</button>
     </div>
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
     <div id="gpt-passback">
